fix app stats on mobile (#202)

--- a/packages/comps/src/components/common/labels.styles.less
+++ b/packages/comps/src/components/common/labels.styles.less
@@ -198,71 +198,6 @@
   }
 }
 
-.AppStats {
-  .SimpleBorder;
-
-  padding: 0 @size-36;
-  border-radius: @size-16;
-  height: @size-150;
-  background: var(--simple-light-bg);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-
-  > div {
-    border-right: @size-1 solid var(--simple-border);
-    padding: @size-36;
-
-    &:first-of-type {
-      padding-left: 0;
-    }
-
-    &:nth-of-type(3),
-    &:nth-of-type(4),
-    &:nth-of-type(5) {
-      margin: @size-36 0;
-      padding: 0 @size-36;
-    }
-
-    &:last-of-type {
-      border-right: 0;
-      padding-right: 0;
-    }
-  }
-
-  &.CashAmounts {
-    display: flex;
-
-    > div {
-      padding-right: @size-36;
-
-      &:last-of-type {
-        border-right: @size-1 solid var(--simple-border);
-      }
-    }
-  }
-
-  @media @breakpoint-max-desktop {
-    &.CashAmounts > div:nth-of-type(5) {
-      padding-right: 0;
-      border-right: none;
-    }
-  }
-
-  @media @breakpoint-tiny {
-    > div {
-      &:nth-of-type(3) {
-        border-right: none;
-      }
-
-      &:nth-of-type(4),
-      &:nth-of-type(5) {
-        display: none;
-      }
-    }
-  }
-}
-
 .CategoryIcon {
   .DefaultLabelHeight;
 
