--- a/packages/simplified/src/modules/common/labels.styles.less
+++ b/packages/simplified/src/modules/common/labels.styles.less
@@ -62,6 +62,14 @@
         margin-bottom: @size-8;
       }
     }
+
+    @media @breakpoint-mobile-tablet {
+      > div {
+        > span:first-of-type {
+          margin-bottom: @size-2;
+        }
+      }
+    }
   }
 }
 
@@ -127,11 +135,12 @@
     padding-right: @size-4;
 
     > div {
-      padding: @size-18 @size-8;
+      padding: @size-14 @size-8;
       display: flex;
       flex-direction: column;
       height: auto;
       justify-content: center;
+      align-items: center;
 
       > span:first-of-type {
         text-align: center;
@@ -149,10 +158,6 @@
         > span:first-of-type {
           margin-bottom: @size-2;
           text-align: center;
-        }
-
-        > span:last-of-type  {
-          margin-left: @size-4;
         }
       }
     }
